# upstream-to-pr

./: Dockerfile  README.md  action.yml  autoupdate.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/actions/update-v-tag/: action.yml  index.js
.github/workflows/: check-dist.yml  post-dependabot-build.yml  tag.yml  test.yml
__tests__/: main.test.ts  upstream-to-pr.test.ts
src/: main.ts  upstream-to-pr.ts
