[project]
name = "upstream-to-pr"
version = {attr = "apitokens.VERSION"}
authors = [
    {name = "Filipe Pina", email = "148fn0zm@duck.com"},
]
description = "..."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = []

[project.optional-dependencies]
dev = ["black==23.1.0"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
)/
'''
